--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   font-family: Roboto;
+  user-select: none !important;
 }
 
 code {
@@ -23,4 +24,11 @@ code {
 
 .hidden{
   visibility: hidden !important;
+}
+
+a {
+  text-decoration: none !important;
+}
+a:hover {
+  text-decoration: none !important;
 }
