--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -30,4 +30,7 @@
   --voiletShadeLight: #31213cc4;
   --color: #8fc866;
   --hover: #66c887;
+  --black1: #222629;
+  --green1: #87c231;
+  --green2: #618930;
 }
