--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -446,12 +446,12 @@
     width: 100%;
 }
 
-.MyIntoPar{
-  /* width: 100%;
-    height: 100%; */
+/* .MyIntoPar{
+  width: 100%;
+    height: 100%; 
     /* width: 336px;
-    height: 336px; */
-}
+    height: 336px;
+} */
 .introPar{
   /* width: 336px;
   height: 336px; */
@@ -462,9 +462,10 @@
   display: flex;
   align-items: center;
 }
-.introParHead{
-  /* padding: 20px; */
-}
+
+/* .introParHead{
+  
+} */
 
 
 
