--- a/src/components/CardGlobal/CardGlobal.css
+++ b/src/components/CardGlobal/CardGlobal.css
@@ -25,7 +25,7 @@
      border-radius: 3rem;
 } */
 
-.card__text {
+.cardtext {
     max-width: 50ch;
     margin: 0;
     padding: 3rem;
@@ -46,17 +46,17 @@
 	}
 }
 
-.card__footer {
+.cardup {
     padding: 1rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
   }
-  .footer__bg {
+  .cardupbg {
     background: rgb(92, 191, 187);
     background: linear-gradient(to right, #5cbfbb, #74d690);
   }
-  .card__thumb {
+  .cardupimg {
     width: 60px;
     height: 60px;
     border-radius: 100%;
@@ -64,13 +64,13 @@
     transition: transform 0.2s ease-out;
     object-fit: cover;
   }
-  .thumb__bdr {
+  .cardupimgbdr {
     border: 5px solid white;
   }
-  .card:hover .card__thumb {
+  .card:hover .cardupimg {
     transform: scale(1.15);
   }
-  .card__p-name {
+  .carduppname {
     color: white;
   }
   
