--- a/src/Pages/Profiles/Profiles.css
+++ b/src/Pages/Profiles/Profiles.css
@@ -9,20 +9,20 @@
   flex-direction: column;
 }
 
-
-
 .profileSectionPar {
-  height: calc(100vh - 100px);
+  position: relative;
+  top: 150px;
   overflow: auto;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: calc(100vh - 150px);
 }
 
-.profileSection{
-    display: flex;
-    width: 70%;
-    flex-wrap: wrap;
-    height: 70%;
+.profileSection {
+  display: flex;
+  width: 70%;
+  flex-wrap: wrap;
+  height: 70%;
 }
