--- a/src/components/Headers/Headers.css
+++ b/src/components/Headers/Headers.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
+  position: fixed;
+  width: 100%;
   padding: 16px 0px;
   z-index: 8;
   /* transform: translate3d(0px, 0px, 0px); */
@@ -12,7 +13,6 @@
   /* height: 35vh; */
   height: 100px;
 }
-
 
 .backIcon {
   width: 3.5rem;
@@ -30,35 +30,33 @@
 }
 
 .h1c {
-    font-weight: bold;
-    width: 100%;
-    text-align: center;
-    margin: 3.2rem 0rem;
-    color: white;
-}
-.cpf{
-    color: var(--green1);
-    background: transparent;
-}
-
-.Swd{
+  width: 100%;
+  text-align: center;
+  margin: 3.2rem 0rem;
   color: white;
 }
-.swdbcg{
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); 
+.cpf {
+  color: var(--green1);
+  background: transparent;
+}
+
+.Swd {
+  color: white;
+}
+.swdbcg {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   /* background-size: 400% 400% */
   /* animation: gradient 15s ease infinite;  */
-  
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
