--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -36,4 +36,12 @@
   --dualbox_c1: #8459fe;
   --dualbox_c2: #ffa2bf;
   --dualbox_c3: #201f31;
+  --card_2: #e73c7e;
+  --card_1: #ee7752;
+  --card_4: #23d5ab;
+  --card_3: #23a6d5;
+  --card_5: #5e72e5;
+  --color-app: #071b2f;
+  --color-ab: #6c63ff;
+  --color-ab2: #3f3d56;
 }
