--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,12 +1,6 @@
-@import '../../styles/colors.css';
+@import "../../styles/colors.css";
 
-.center-flex-class {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.w100{
+.w100 {
   width: 100%;
 }
 .flex-dir-col {
@@ -29,18 +23,18 @@
   position: relative; */
 }
 
-.HomePage{
+.HomePage {
   /* background:var(--violetShade2) ; */
   /* width: 100vw;
   height: 100vh; */
   width: 100%;
   height: 100%;
-  
+
   position: relative;
   /* cursor: pointer; */
   z-index: 2;
 }
-.overlay{
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,11 +45,10 @@
   z-index: 2;
 }
 
-
 .upperHead {
- background-color:var(--c16);
- height: 60px;
- /* border-radius: 0 0 50% 50%; */
+  background-color: var(--c16);
+  height: 60px;
+  /* border-radius: 0 0 50% 50%; */
 }
 
 .profileIntroSec {
@@ -112,7 +105,7 @@
 .rightSec {
   display: flex;
   align-items: center;
- justify-content: center;
+  justify-content: center;
   width: 50%;
 }
 
@@ -122,7 +115,7 @@
   flex-wrap: wrap;
   /* position: relative; */
   height: 472px;
-    width: 472px;
+  width: 472px;
 }
 
 .profile-cards {
@@ -144,8 +137,10 @@
   /* transform: scale(1); */
 }
 
-
-.pfc-up,.pfc-down{transform: scale(1);}
+.pfc-up,
+.pfc-down {
+  transform: scale(1);
+}
 
 .pfc-up:before {
   content: "";
@@ -163,6 +158,7 @@
   transform: scale(1);
   transform-origin: 50% 50%;
   transition: transform 0.25s ease-out;
+  -webkit-transition: transform 0.25s ease-out;
 }
 .pfc-down:before {
   content: "";
@@ -179,50 +175,53 @@
   transform: scale(1);
   transform-origin: 50% 50%;
   transition: transform 0.25s ease-out;
+  -webkit-transition: transform 0.25s ease-out;
 }
-.pfc-up:hover:before , .pfc-down:hover:before{
+.pfc-up:hover:before,
+.pfc-down:hover:before {
   transform: scale(21);
 }
 
 .pfc-up:hover .cs-font {
   transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
   color: var(--violetShade2) !important;
 }
 .pfc-up:hover .cf-font {
   transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
   color: var(--violetShade2) !important;
 }
 .pfc-down:hover .ca-font {
   transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
   color: var(--violetShade2) !important;
 }
-.pfc-down:hover .cp-font{
+.pfc-down:hover .cp-font {
   transition: all 0.3s ease-out;
+  -webkit-transition: all 0.3s ease-out;
   color: var(--violetShade2) !important;
 }
-
-
-
 
 .cs {
   /* background-color: var(--c18); */
-  background: linear-gradient(to right,#de6262  , #ffb88c);
- 
+  background: linear-gradient(to right, #de6262, #ffb88c);
+
   color: white;
 }
 .cf {
   /* background-color: var(--c13); */
-  background: linear-gradient(to right,#185a9d    , #43cea2 ); 
+  background: linear-gradient(to right, #185a9d, #43cea2);
   color: white;
 }
 .ca {
   /* background-color: var(--c14);*/
-  background: linear-gradient(to right,#4568dc  , #b06ab3);
+  background: linear-gradient(to right, #4568dc, #b06ab3);
   color: white;
 }
 .cp {
   /* background-color: var(--c15); */
-  background: linear-gradient(to right,#dd2476,#ff512f);
+  background: linear-gradient(to right, #dd2476, #ff512f);
   color: white;
 }
 .cs-font {
@@ -239,9 +238,9 @@
 }
 
 .profileImagePar {
-  cursor:pointer;
+  cursor: pointer;
   border-radius: 50%;
-  background: var(--violetShade2);
+  background: var(--color-app);
   height: 190px;
   width: 190px;
 }
@@ -256,7 +255,7 @@
 .profileImageDiv {
   border-radius: 50%;
   /* background-color: white; */
-  background-color:transparent;
+  background-color: transparent;
   height: 120px;
   min-width: 120px;
 }
@@ -278,12 +277,10 @@
   width: inherit; */
 }
 
-
-.fsd{
+.fsd {
   word-break: break-word;
   width: 100px;
 }
-
 
 .go-corner-up {
   display: flex;
@@ -298,7 +295,7 @@
   /* background-color:var(--c19); */
   /* background: linear-gradient(to right, #42275a , #734b6d); */
   background-color: var(--yellowShade2);
- border-bottom-left-radius: 40px;
+  border-bottom-left-radius: 40px;
 }
 .go-arrow-up {
   margin-top: -4px;
@@ -319,16 +316,15 @@
   /* background: linear-gradient(to right, #42275a , #734b6d); */
   border-top-left-radius: 40px;
 }
-.go-arrow-down{    
+.go-arrow-down {
   margin-top: 1px;
   margin-right: -7px;
-
 }
 
-.go-arrow{
-    /* color: white; */
-    color: var(--violetShade2);
-    font-family: courier, sans;
+.go-arrow {
+  /* color: white; */
+  color: var(--violetShade2);
+  font-family: courier, sans;
 }
 
 .profile-pic-card-front > img {
@@ -355,6 +351,7 @@
   height: 100%;
   text-align: center;
   transition: transform 0.6s;
+  -webkit-transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 50%;
@@ -383,48 +380,46 @@
 .profile-pic-card-back {
   /* border: 2px solid var(--c16); */
   /* background-color: var(--c12); */
-  background: linear-gradient(to right,#000428   , #004e92);
+  background: linear-gradient(to right, #000428, #004e92);
   color: white;
   font-size: 12px;
   transform: rotateY(180deg);
 }
 
-
 @keyframes spin {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
-.desg{
- margin: 5px 0px;
+.desg {
+  margin: 5px 0px;
 }
 
-.leftSec{
+.leftSec {
   display: flex;
   flex-direction: column;
- justify-content: center;
- /* align-items: center;  */
- /* height: 372px; */
- /* width: 250px; */
- width: 50%;
- /* height: 100%; */
- background-color: var(--violetShade2);
+  justify-content: center;
+  /* align-items: center;  */
+  /* height: 372px; */
+  /* width: 250px; */
+  width: 50%;
+  /* height: 100%; */
+  background-color: var(--color-app);
 }
-.leftImagePar{
- display: flex;
-    justify-content: center;
-    align-items: center;
-    height: inherit;
-    width: inherit;
+.leftImagePar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  width: inherit;
 }
-.leftImagePar > img
-{
- height: 100%;
-    width: 100%;
+.leftImagePar > img {
+  height: 100%;
+  width: 100%;
 }
 /* .rightSec{
  display: flex;
@@ -433,17 +428,16 @@
  height: inherit;
  width: 250px;
 } */
-.rightImagePar{
- display: flex;
-    justify-content: center;
-    align-items: center;
-    height: inherit;
-    width: inherit;
+.rightImagePar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: inherit;
+  width: inherit;
 }
-.rightImagePar > img
-{
- height: 100%;
-    width: 100%;
+.rightImagePar > img {
+  height: 100%;
+  width: 100%;
 }
 
 /* .MyIntoPar{
@@ -452,7 +446,7 @@
     /* width: 336px;
     height: 336px;
 } */
-.introPar{
+.introPar {
   /* width: 336px;
   height: 336px; */
   /* width: 100%;
@@ -467,8 +461,6 @@
   
 } */
 
-
-
 .introParHead .span1 {
   font-size: 30px;
   font-weight: bold;
@@ -478,7 +470,6 @@
   font-size: 54px;
   font-weight: bold;
   color: var(--yellowShade2);
-  
 }
 .introParHead .span3 {
   font-size: 40px;
@@ -492,7 +483,7 @@
   color: var(--cw);
 }
 
-.introParHead .span4{
+.introParHead .span4 {
   /* font-size: 14px;
   font-weight: bold; */
   display: flex;
@@ -501,8 +492,7 @@
   margin-top: 20px;
 }
 
-
-.introParHead .span4 .span4-badges{
+.introParHead .span4 .span4-badges {
   padding: 10px;
   border-radius: 25px;
   font-size: 20px;
@@ -510,18 +500,17 @@
   margin: 0px 10px 0px 0px;
 }
 
-
-.introParHead .span4 .span4-badges:nth-child(odd){
+.introParHead .span4 .span4-badges:nth-child(odd) {
   background: transparent;
   color: var(--cw);
-  border: 1px solid  var(--yellowShade2);
+  border: 1px solid var(--yellowShade2);
 }
 /* .introParHead .span4 .span4-badges:nth-child(odd):hover{
   background: var(--yellowShade2);
   color: var(--violetShade2);
 } */
 
-.introParHead .span4 .span4-badges:nth-child(even){
+.introParHead .span4 .span4-badges:nth-child(even) {
   background: var(--yellowShade2);
   color: var(--violetShade2);
 }
@@ -532,7 +521,7 @@
   border: 1px solid  var(--yellowShade2);
 } */
 
-.introParBody{
+.introParBody {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -544,29 +533,34 @@
   transform:rotate(360deg) */
 }
 
-.introParBody  .span2 {
-    font-size: 16px;
-    height: 30px;
-    width: 30px;
-    /* background: var(--c16); */
-    background: linear-gradient(to right,#56ab2f     , #a8e063);
-    margin: 5px;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: 1px 
+.introParBody .span2 {
+  font-size: 16px;
+  height: 30px;
+  width: 30px;
+  /* background: var(--c16); */
+  background: linear-gradient(to right, #56ab2f, #a8e063);
+  margin: 5px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px 
     padsolid; */
-    /* border-radius: 8px; */
+  /* border-radius: 8px; */
 }
 
-.sp1{ border-top-left-radius: 27px;}
-.sp2{ border-top-right-radius: 27px;}
-.sp3{ border-bottom-left-radius: 27px;}
-.sp4{ border-bottom-right-radius: 27px;}
-
-
-
+.sp1 {
+  border-top-left-radius: 27px;
+}
+.sp2 {
+  border-top-right-radius: 27px;
+}
+.sp3 {
+  border-bottom-left-radius: 27px;
+}
+.sp4 {
+  border-bottom-right-radius: 27px;
+}
 
 .introParHead .span5 {
   font-size: 24px;
@@ -576,15 +570,15 @@
   word-spacing: 5px;
 }
 
-.col51{
+.col51 {
   color: var(--yellowShade2);
 }
 
-.col52{
+.col52 {
   color: var(--cw);
 }
 
- .btnAboutMeParent{
+.btnAboutMeParent {
   margin-top: 40px;
 }
 
@@ -630,21 +624,17 @@
     right: 0;
   } */
 
- 
-
-.slide:hover{
+.slide:hover {
   box-shadow: inset 8em 0 0 0 var(--yellowShade2);
   border-color: var(--yellowShade2);
   color: var(--violetShade2);
   font-weight: bold;
 }
 
-
-
-
 .slide {
   color: var(--yellowShade2);
   transition: 0.25s;
+  -webkit-transition: 0.25s;
   font-weight: bold;
   font-size: 16px;
   text-transform: uppercase;
@@ -658,4 +648,46 @@
   margin: 0.5em;
   padding: 1em;
   border-radius: 6px;
+  cursor: pointer;
+}
+
+.imagesSvg {
+  padding: 15px;
+  position: absolute;
+  border-radius: 12px;
+}
+.solution_mindset {
+  bottom: 0px;
+  left: 43vw;
+  background: var(--color-app);
+}
+
+.solution_mindset div > img {
+  height: 100%;
+  width: 100%;
+}
+
+.developer {
+  top: 0px;
+  left: 43vw;
+  background: var(--cw);
+}
+
+.developer div > img {
+  height: 100%;
+  width: 100%;
+}
+
+.imgPar {
+  padding: 15px;
+  height: 100px;
+  width: 150px;
+  border-radius: 12px;
+}
+
+.m {
+  border: 5px solid var(--color-app);
+}
+.s {
+  border: 5px solid var(--whiteShadeOne);
 }
