--- a/src/Pages/Skills/Skills.css
+++ b/src/Pages/Skills/Skills.css
@@ -1,15 +1,24 @@
 .SkillsWraper {
   width: 100vw;
   height: 100vh;
-  background: #13111e;
+  /* background: #13111e; */
+  /* background: #fafafa; */
+  background: #f5f5f9;
 }
 .CardGlobalWrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
   position: relative;
   top: 150px;
   overflow: auto;
   height: calc(100vh - 150px);
+  width: 100%;
+}
+
+.CardGlobalWrapperIn {
+  width: 1024px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
