--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -44,4 +44,6 @@
   --color-app: #071b2f;
   --color-ab: #6c63ff;
   --color-ab2: #3f3d56;
+  --color-home-card-focus: #6c44fc;
+  --color-header-card-contrast: white;
 }
