--- a/src/components/ProfileCards/ProfileCards.css
+++ b/src/components/ProfileCards/ProfileCards.css
@@ -2,18 +2,33 @@
 @import "../../styles/colors.css";
 
 .cardPro {
-  height: 150px;
-  width: 150px;
-  border-radius: 4px;
-  margin: 5px;
+  /* height: 150px;
+  width: 150px; */
+  border-radius: 12px;
+  margin: 15px;
   text-align: center;
   cursor: pointer;
   flex-wrap: wrap;
+  box-shadow: 0px 4px 30px rgb(43 98 169 / 50%);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  position: relative;
+  font-size: 21px;
+  flex-shrink: 0;
+  transition: all 0.3s;
+  /* padding: 10px; */
+}
+@media screen and (min-width: 768px) {
+  .cardPro:hover {
+    transform: scale(1.2);
+  }
 }
 
 .icon {
-  height: 5rem;
-  width: 5rem;
+  /* height: 100%;
+  width: 100%; */
   cursor: pointer;
   transition: 0.3s all ease-in-out;
   -webkit-animation: 1.4s ease-in-out 0.4s both fade;
@@ -25,7 +40,7 @@ a {
   color: #f2f2f2;
 }
 
-.img > img {
-  width: 100%;
-  height: 100%;
+.cardPro > img {
+  width: 80%;
+  height: 80%;
 }
