--- a/src/components/ProfileCards/ProfileCards.css
+++ b/src/components/ProfileCards/ProfileCards.css
@@ -30,8 +30,11 @@
   /* height: 100%;
   width: 100%; */
   cursor: pointer;
+  -webkit-transition: 0.3s all ease-in-out;
+  -moz-transition: 0.3s all ease-in-out;
   transition: 0.3s all ease-in-out;
   -webkit-animation: 1.4s ease-in-out 0.4s both fade;
+  -moz-animation: 1.4s ease-in-out 0.4s both fade;
   animation: 1.4s ease-in-out 0.4s both fade;
 }
 
