--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -340,10 +340,11 @@
 }
 
 .profile-pic-card {
-  background-color: transparent;
+  background-color: #7b3bc6;
   width: inherit;
   height: inherit;
   perspective: 1000px;
+  cursor: pointer;
 }
 
 .profile-pic-card-inner {
@@ -370,7 +371,7 @@
   border-radius: 50%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  border: 2px solid var(--yellowShade2);
+  /* border: 2px solid var(--yellowShade2); */
 }
 
 .profile-pic-card-front {
@@ -409,7 +410,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 60%;
+  width: 65%;
 }
 
 .leftSecInner {
@@ -451,12 +452,12 @@
 
 .MyIntoPar {
   height: 100%;
-  background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
+  /* background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%); */
   background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
   /* padding: 50px;
   background: var(--c7);
   border-radius: 12px; */
-  width: 80%;
+  width: 75%;
 }
 .introPar {
   /* min-height: 460px; */
@@ -464,6 +465,7 @@
   background: #fff;
   border-radius: 12px;
   position: relative;
+  width: fit-content;
   max-width: 700px;
 }
 
@@ -504,7 +506,7 @@
 
 .uname {
   font-weight: 700;
-  font-size: 48px;
+  font-size: 36px;
   color: #6944ff;
   margin-bottom: 15px;
 }
@@ -572,7 +574,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 30px;
+  margin: 20px 30px;
   color: white;
 }
 
@@ -618,7 +620,7 @@
   flex-wrap: wrap;
   /* flex-direction:column; */
   /* border-radius: 12px; */
-  /* padding: 30px; */
+  padding: 5px;
   color: var(--cw);
   /* animation: spin 2.5s infinite;
   transform:rotate(360deg) */
@@ -777,8 +779,8 @@
 
 .imgPar {
   padding: 15px;
-  height: 50px;
-  width: 100px;
+  height: 75px;
+  width: 150px;
   border-radius: 12px;
   background: white;
 }
@@ -798,11 +800,11 @@
   display: flex;
   flex-direction: column;
   padding: 0px 20px;
-  width: 20%;
+  width: 25%;
 }
 
 .subCLs {
-  padding: 15px;
+  padding: 5px;
   /* height: 100px;
   width: 100px; */
   border-radius: 12px;
@@ -815,6 +817,21 @@
   width: 100%;
 }
 
+@media screen and (min-width: 768px) {
+  .subCLs:hover {
+    transform: scale(1.2);
+  }
+}
+
+.subCLs {
+  cursor: pointer;
+  -webkit-transition: 0.3s all ease-in-out;
+  -moz-transition: 0.3s all ease-in-out;
+  transition: 0.3s all ease-in-out;
+  -webkit-animation: 1.4s ease-in-out 0.4s both fade;
+  -moz-animation: 1.4s ease-in-out 0.4s both fade;
+  animation: 1.4s ease-in-out 0.4s both fade;
+}
 .svg1 {
   background: linear-gradient(to right, #dd2476, #ff512f);
 }
@@ -833,7 +850,7 @@
 }
 
 .contactCLassChild {
-  margin-top: 25px;
+  margin: 20px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -842,7 +859,6 @@
 
 @media screen and (max-width: 1368px) {
   .leftSec {
-    width: 60% !important;
   }
 
   .middleSec {
@@ -852,7 +868,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 40%;
+    width: 35%;
+  }
+  .introPar {
+    width: 570px !important;
   }
 }
 
@@ -860,7 +879,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 @media screen and (max-width: 576px) {
   .profile-card-ctr {
