--- a/src/components/ProfileCards/ProfileCards.css
+++ b/src/components/ProfileCards/ProfileCards.css
@@ -47,3 +47,10 @@ a {
   width: 80%;
   height: 80%;
 }
+
+/* @media screen and (max-width: 414px) {
+  .cardPro {
+    width: 80px !important;
+    height: 80px !important;
+  }
+} */
