--- a/src/Pages/Profiles/Profiles.css
+++ b/src/Pages/Profiles/Profiles.css
@@ -26,3 +26,12 @@
   flex-wrap: wrap;
   height: 70%;
 }
+
+@media screen and (max-width: 414px) {
+  .profileSection {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+}
